--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -24,7 +24,7 @@ main .hero > div > div.hero-image {
   min-width: 0;
   overflow: hidden;
   position: relative;
-  border-radius: 0;
+  border-radius: 10px;
 }
 
 main .hero > div > div.hero-image picture {
